fixed layout overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ header h1 {
   padding: 20px;
   margin-bottom: 30px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow-y: scroll;
 }
 
 h2 {
